After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 597097 - Doesn't escape GStreamer tags (& -> & etc)
Doesn't escape GStreamer tags (& -> & etc)
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-10-02 11:24 UTC by Sebastian Dröge (slomo)
Modified: 2009-10-02 14:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2009-10-02 11:24:21 UTC
Hi,
totem 2.28 doesn't properly escape GStreamer tags when displaying them in some GTK widget as pango markup. For example & are not escaped to &

This seems to be only the case for the tooltip that is shown in the playlist.

Backtrace:

Gtk-WARNING **: Failed to set text from markup due to error parsing markup: Error on line 1: Entity did not end with a semicolon; most likely you used an ampersand character without intending to start an entity - escape ampersand as &
aborting...

$ bt

(gdb) bt
  • #0 *__GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 64
  • #1 *__GI_abort
    at abort.c line 88
  • #2 IA__g_logv
    at /tmp/buildd/glib2.0-2.22.1/glib/gmessages.c line 549
  • #3 IA__g_log
    at /tmp/buildd/glib2.0-2.22.1/glib/gmessages.c line 569
  • #4 gtk_label_set_markup_internal
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtklabel.c line 2248
  • #5 gtk_label_recalculate
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtklabel.c line 1796
  • #6 IA__gtk_label_set_markup
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtklabel.c line 2325
  • #7 IA__gtk_tooltip_set_markup
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtktooltip.c line 223
  • #8 gtk_tree_view_set_tooltip_query_cb
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtktreeview.c line 15557
  • #9 _gtk_marshal_BOOLEAN__INT_INT_BOOLEAN_OBJECT
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtkmarshalers.c line 835
  • #10 IA__g_closure_invoke
    at /tmp/buildd/glib2.0-2.22.1/gobject/gclosure.c line 767
  • #11 signal_emit_unlocked_R
    at /tmp/buildd/glib2.0-2.22.1/gobject/gsignal.c line 3247
  • #12 IA__g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.22.1/gobject/gsignal.c line 2990
  • #13 IA__g_signal_emit_by_name
    at /tmp/buildd/glib2.0-2.22.1/gobject/gsignal.c line 3074
  • #14 gtk_tooltip_run_requery
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtktooltip.c line 803
  • #15 _gtk_tooltip_handle_event
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtktooltip.c line 1334
  • #16 IA__gtk_main_do_event
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtkmain.c line 1651
  • #17 gdk_event_dispatch
    at /tmp/buildd/gtk+2.0-2.18.1/gdk/x11/gdkevents-x11.c line 2369
  • #18 g_main_dispatch
    at /tmp/buildd/glib2.0-2.22.1/glib/gmain.c line 1960
  • #19 IA__g_main_context_dispatch
    at /tmp/buildd/glib2.0-2.22.1/glib/gmain.c line 2513
  • #20 g_main_context_iterate
    at /tmp/buildd/glib2.0-2.22.1/glib/gmain.c line 2591
  • #21 IA__g_main_loop_run
    at /tmp/buildd/glib2.0-2.22.1/glib/gmain.c line 2799
  • #22 IA__gtk_main
    at /tmp/buildd/gtk+2.0-2.18.1/gtk/gtkmain.c line 1205
  • #23 main
    at totem.c line 278