Fix warning when setting the tooltip with unescaped text

When a filename/title has a '&', the tooltip should have its
text escaped.

https://bugzilla.gnome.org/show_bug.cgi?id=597097